--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ plotly==5.18.0
 
 streamlit==1.29.0
 
-numpy                         1.24.3
+numpy==1.24.3
 
-packaging                     23.0
-pandas                        1.5.3
-pandas-flavor                 0.6.0
+
+pandas==1.5.3
+
